Fix team photos - use local images instead of expiring LinkedIn URLs

--- a/index.html
+++ b/index.html
@@ -683,13 +683,13 @@
         </div>
         <div class="team-grid">
             <div class="team-member">
-                <img src="https://media.licdn.com/dms/image/v2/C5603AQHjQRgh2lIEeg/profile-displayphoto-shrink_800_800/profile-displayphoto-shrink_800_800/0/1517535375015?e=1743638400&v=beta&t=Xs8z0uyiN50AvKQ2XBxjhOYKlQ9oFQEz8Y7m3Xwx6Bg" alt="David Tedesco">
+                <img src="images/david-tedesco.jpg" alt="David Tedesco">
                 <h3>David Tedesco</h3>
                 <div class="role">Co-Founder & CEO</div>
                 <p>Founder & CEO of Outlier. Harvard Business School. 25+ years building companies across healthcare, aerospace, and technology.</p>
             </div>
             <div class="team-member">
-                <img src="https://media.licdn.com/dms/image/v2/D5603AQHKbGGwRQXgng/profile-displayphoto-shrink_800_800/profile-displayphoto-shrink_800_800/0/1700757212286?e=1743638400&v=beta&t=AJ5t-sTq4gG9nFp0_5tqUPLqg3vScWKHpCJzPHpXNR8" alt="Louis Aaron">
+                <img src="images/louis-aaron.jpg" alt="Louis Aaron">
                 <h3>Louis Aaron</h3>
                 <div class="role">Co-Founder & CTO</div>
                 <p>Founder of BoreDM. Princeton CS & Operations Research. Former Boring Company, BCG. Built enterprise SaaS trusted by state DOTs.</p>
